--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <h1>단비</h1>
     <p class="lead">This Website created to recommend plants.</p>
     <p class="lead">
-      <a href="/question/1/" class="btn btn-lg btn-light fw-bold border-white bg-white">추천받기</a>
+      <a href="/question/1/" class="btn btn-lg btn-outline-success">추천받기</a>
     </p>
   </main>
 {% endblock %}
