--- a/templates/board/write.html
+++ b/templates/board/write.html
@@ -1,5 +1,14 @@
 {% extends "layout.html" %}
 
+{% block body %}
+<body style="font-family: 'Nanum Gothic', sans-serif;">
+{% endblock %}
+
+{% block head %}
+<script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 <!DOCTYPE html>
 <html>
@@ -10,29 +19,46 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-<form action="/write/" method="POST">
+<form action="/write/" method="POST" class="mx-auto" style="width: 80%;">
 <!-- 제목 입력 -->
-<div class="input-group mt-3 mx-auto" style="width: 80%;">
+<div class="input-group mt-3 mb-4 mx-auto">
     <span class="input-group-text" id="inputGroup-sizing-default">제목</span>
     <input name="title" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
 </div>
 <!-- 본문 입력 -->
-<div class="mb-3" style="text-align: center;">
-    <label for="exampleFormControlTextarea1" class="form-label mt-3"><h4>본문</h4></label>
-    <textarea name="context" class="form-control mx-auto" id="exampleFormControlTextarea1" rows="12" placeholder="내용을 입력하세요." style="width:80%"></textarea>
-</div>
+<div id="editor"></div>
+<textarea name="editor_content" id="editor_content"></textarea>
 <div class="d-flex justify-content-center">
-<button class="btn btn-primary rounded p-2" type="submit">등록</button>
+<button class="btn btn-primary rounded p-2 mt-4" type="submit">등록</button>
 </div>
 </form>
 <script>
+var toolbarOptions = [
+  ['image'],
+  ['bold', 'underline']
+]
+
+var quill = new Quill('#editor', {
+  modules: {
+    toolbar: toolbarOptions
+  },
+  theme: 'snow'
+});
+
+  quill.on('text-change', function() {
+  var content = quill.root.innerHTML;
+  document.getElementById('editor_content').innerHTML = content;
+});
+
+quill.root.style.height = "400px";
+
     window.history.forward();
      function noBack() {
          window.history.forward();
      }
 </script>
-<!-- 스크립트 CDN -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<!-- bootstrap js CDN -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
 </html>
