--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,9 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.108.0">
-    <title>Cover Template · Bootstrap v5.3</title>
-
+    <title>단비</title>
+    {% block head %}
+    {% endblock %}
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
 
     
@@ -26,6 +27,8 @@
 
 
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -82,12 +85,13 @@
     <!-- Custom styles for this template -->
     <link href="" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-bg-dark">
-    
+{% block body %}
+<body class="h-100 text-center text-bg-light" style="font-family: 'Nanum Gothic', sans-serif;">
+{% endblock %}    
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <!-- 네비게이션 바 -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd; border-radius: 8px;">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <img src=" {{ url_for('static', filename='image/식물아이콘.png') }}" alt="Bootstrap" width="30" height="24">
@@ -141,7 +145,8 @@
   </footer>
 </div>
 
-
+{% block script %}
+{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
