--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,8 @@
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
 
-
+    {% block style %}
+    {% endblock %}
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
