--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,8 +24,8 @@
 <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
-
-
+    {% block style %}
+    {% endblock %}
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
