--- a/templates/board/board.html
+++ b/templates/board/board.html
@@ -55,7 +55,7 @@
             <a class="test" href="/board/{{x[0]}}/" style="width: 100%; padding: 12px 0; text-decoration: none; text-align: start;">
               {{x[1]}}
               <div class="post_info">
-                작성자 {{x[2]}} 조회수 0 좋아요 0
+                작성자 {{x[2]}} 조회수 {{x[4]}} 좋아요 0
               </div>
             </a>
           </td>
