--- a/templates/board/boardview.html
+++ b/templates/board/boardview.html
@@ -1,5 +1,22 @@
 {% extends "layout.html" %}
 
+{% block style %}
+<style>
+  #heart {
+  color: gray;
+  font-size: 24px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#heart.active {
+  color: red;
+  transition: 0.3s;
+}
+</style>
+{% endblock %}
+
 {% block content %}
 <script src="https://kit.fontawesome.com/9d89f9ed49.js" crossorigin="anonymous"></script>
   <!-- 제목 -->
@@ -13,7 +30,7 @@
   {{ context | safe }}
   </div>
   <!-- 수정,삭제 버튼 -->
-  {% if session['user'] == userid %}
+  {% if session['ucheck_ox'] == ucheck_oxid %}
   <div class="d-flex justify-content-center">
     <button class="btn btn-primary m-2" onclick="location.href='/board/{{id}}/?method=update'" {{hidden}}>수정</button>
     <form  onsubmit="return confirm_delete()">
@@ -24,7 +41,17 @@
   {% if hidden == "hidden" %}
   <button class="btn btn-primary m-2 w-auto mx-auto" onclick="location.href='/board/{{id}}/update'">등록</button>
    {% endif %}
-  
+
+<!-- 좋아요 -->
+<form id="like_form" style="text-align: start;">
+  <input name="like_btn" value="checked" type="checkbox" id="like_box" style="display: none;">
+  <button type="submit" style="border: none; background-color: transparent;">
+  <label for="like_box" onclick="like()" id="heart">&#10084;</label>
+  </button>
+  <span id="like_num">{{likes}}</span>
+</form>
+<div id="check_ox" style="display: none;">{{check_ox}}</div>
+
 <!-- 댓글 -->
 <hr>
 <h4 class="text-start ps-3">댓글</h4>
@@ -77,6 +104,58 @@ function test() {
     registerBtn.style.color = 'rgba(0,0,0,0.5)';
   }
 }
+
+// 좋아요 상태 유지
+var check_ox = document.getElementById('check_ox').innerHTML
+  var like_box = document.getElementById('like_box')
+  if (check_ox === 'None') { //좋아요 누른적이 없다면
+    like_box.checked = false;
+  } else { //좋아요 누른적이 있다면
+    like_box.checked = true;
+  }
+
+// 게시글 좋아요 
+var heart = document.getElementById("heart");
+var like_box = document.getElementById('like_box');
+if (like_box.checked === true) {
+  heart.classList.add('active')
+} else {
+  heart.classList.remove('active')
+}
+
+// 하트 클릭시마다 ..
+function like() {
+  var heart = document.getElementById("heart");
+  heart.classList.toggle('active');
+  if (heart.classList.contains('active')) {
+    var num = document.getElementById("like_num").innerHTML;
+    document.getElementById("like_num").innerHTML = parseInt(num) + 1;
+  } else {
+    var num = document.getElementById("like_num").innerHTML;
+    document.getElementById("like_num").innerHTML = parseInt(num) - 1; 
+  }
+}
+
+
+// 좋아요 폼 제출 이벤트리스너
+document.getElementById("like_form").addEventListener("submit", function(event) {
+    event.preventDefault(); // 폼 제출 방지
+    var form_data = new FormData(this); // 폼 데이터 수집
+    form_data.append('id', {{id}})
+    var xhr = new XMLHttpRequest(); // XMLHttpRequest 객체 생성
+    xhr.open("post", "{{ url_for('board.post_like') }}"); // 요청 설정
+    xhr.onload = function() { // 요청 완료 후 실행할 콜백 함수
+        if (xhr.status === 200) { // 요청 성공
+            var response = xhr.responseText; // 서버 응답 받기
+            console.log(response); // 콘솔에 응답 출력
+            // 페이지 업데이트 로직 작성
+        } else { // 요청 실패
+            console.error(xhr.statusText); // 에러 메시지 출력
+        }
+    };
+    xhr.send(form_data); // 요청 전송
+});
+
 </script>
 {% endblock %}
 
