--- a/templates/layout.html
+++ b/templates/layout.html
@@ -113,6 +113,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/board/">Community</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/chat/">Chatting</a>
+            </li>
           </ul>
           <ul class="navbar-nav me-0 mb-2 mb-lg-0">
             <li class="nav-item" style="font-size: 14px;">
@@ -141,7 +144,7 @@
   {% endblock %}
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p style="display: none;">pass</p>
   </footer>
 </div>
 
